galley/testdatasets/conversion/dataset/networking.istio.io/v1alpha3/virtualServiceWithUnsupported.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: valid-virtual-service
spec:
  hosts:
    - c
  http:
    - route:
      - destination:
          host: c
          subset: v1
          unsupportedExtraParam: true
        weight: 75
      - destination:
          host: c
          subset: v2
        weight: 25
        unsupportedExtraParam: true
